--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ h2 {
     font-size: 280%;
 }
 
+#menu,
+#logo {
+    line-height: 75px;
+}
+
 #menu {
     font-size: 210%;
     letter-spacing: "4px";
@@ -37,7 +42,20 @@ h2 {
 }
 
 .reverse {
-    display: flex; 
+    display: flex;
     flex-direction: row;
-    float: right; 
+    float: right;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: #3a3a3a solid 1px;
+}
+
+.active{
+    border-bottom: solid 1px #252525;
 }
