--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 #menu,
@@ -32,13 +33,15 @@ h2 {
 }
 
 #menu {
-    font-size: 210%;
-    letter-spacing: "4px";
+    font-size: 110%;
+    letter-spacing: 4px;
 }
 
 #menu li {
     list-style-type: none;
     margin-right: 30px;
+    float: right;
+
 }
 
 .reverse {
@@ -66,9 +69,10 @@ h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+    position: relative;
 }
 
-cover-text, cover-text h2 {
+#cover-text, #cover-text h2 {
     color:#fff;
 }
 
@@ -110,4 +114,47 @@ cover-text, cover-text h2 {
     right: 150px;
 
     position: absolute;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+}
+
+/* Club Ethos */
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: darkkhaki;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: darkmagenta;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: rgb(1, 0, 7);
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
 }
