--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,20 +129,17 @@ h2 {
     padding-top: 30px;
     width: 33%;
     float: left;
-    background-color: darkkhaki;
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    background-color: darkmagenta;
 }
 
 #center-about {
     width: 33%;
     margin: 0 auto;
-    background-color: rgb(1, 0, 7);
 }
 
 hr {
@@ -157,4 +154,45 @@ hr {
     line-height: 20px;
     clear: both;
     margin-bottom: 50px;
+}
+
+.right-about-heading {
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+.right-about-heading p {
+    text-align: right;
+}
+
+#welcome {
+    text-align:center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    height: 300px;
+    width: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-top-width: 1px;
+    border-width:1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
