--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,21 +59,22 @@ h2 {
     border-bottom: #3a3a3a solid 1px;
 }
 
-.active{
+.active {
     border-bottom: solid 1px #252525;
 }
 
 /* Hero Image */
 
-#hero-outer{
+#hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
     position: relative;
 }
 
-#cover-text, #cover-text h2 {
-    color:#fff;
+#cover-text,
+#cover-text h2 {
+    color: #fff;
 }
 
 #hero-image {
@@ -91,16 +92,17 @@ h2 {
 
 /* Creates level of zoom for hero image */
 @keyframes hero-zoom {
-    from{
+    from {
         transform: scale(1);
     }
-    to{
+
+    to {
         transform: scale(1.1);
     }
 }
 
 #cover-text {
-    font-size:130%;
+    font-size: 130%;
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -174,7 +176,7 @@ hr {
 }
 
 #welcome {
-    text-align:center;
+    text-align: center;
     margin: 20px 0;
     font-size: 280%;
 }
@@ -186,7 +188,7 @@ hr {
     border-style: solid;
     border-color: #ccc;
     border-top-width: 1px;
-    border-width:1px;
+    border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -195,4 +197,31 @@ hr {
     background: url(../images/ethos-center-image.jpg) no-repeat center center;
     height: 100%;
     border-radius: 50%;
+}
+
+/* Event times */
+
+#times {
+    background-image: url('../images/dublin-city.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 20%;
+    height: 300px;
+    float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: 2px solid white;
+    box-sizing: border-box;
+}
+
+#times h2 {
+    color: #fafafa;
 }
