--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,3 +290,15 @@ footer{
         display: none;
     }
 }
+
+/* For medium screen sizes 950px and down */
+
+ @media screen and (max-width: 950px) {
+
+    #menu {
+        clear: left;
+        float: left;
+        margin-bottom: 20px;
+        line-height: 25px;
+    }
+} */
